# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/communication/bluetooth/bluetooth.gni")

module_output_path = "bluetooth/bluetooth"
FRAMWORK_DIR = "//foundation/communication/bluetooth"

config("module_private_config") {
    cflags = [
        "-Werror",
        "-Wno-macro-redefined",
        "-Wno-non-c-typedef-for-linkage",
        "-Wno-unused-const-variable",
        "-Wno-deprecated-builtins",
        "-Wno-defaulted-function-deleted",
        "-Woverloaded-virtual",
    ]
    include_dirs = [
        ".",
        "$FRAMWORK_DIR/frameworks/inner/include",
        "$FRAMWORK_DIR/frameworks/js/napi/include",
        "$FRAMWORK_DIR/interfaces/inner_api/include",
        "$FRAMWORK_DIR/interfaces/inner_api/include/c_header",
    ]
    defines = [
        "BTFW_LOG_TAG = \"bluetooth_test\"",
        "BTFW_LOG_DOMAIN = 0xD005300",
        "private = public",
        "protected = public",
    ]
}

ohos_unittest("bluetooth_napi_event_subscribe_module_test") {
    module_out_path = module_output_path

    sources = [
        "$FRAMWORK_DIR/frameworks/js/napi/src/common/napi_event_subscribe_module.cpp",
        "napi_event_subscribe_module_test.cpp",
    ]

    configs = [
        ":module_private_config",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "googletest:gmock_main",
        "googletest:gtest_main",
    ]
}

################################################################################
group("unittest") {
    testonly = true

    deps = []

    if (is_phone_product) {
        deps += [
            ":bluetooth_napi_event_subscribe_module_test",
        ]
    }
}