# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

SUBSYSTEM_DIR = "//foundation/communication"

config("btframework_config") {
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wunused-private-field",
  ]
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//foundation/communication/bluetooth/services/bluetooth_standard/common/",
    "include",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/include",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/framework/common",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_c/include",
  ]
}

config("btframework_public_config") {
  include_dirs = [
    "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/include",
    "//foundation/communication/bluetooth/services/bluetooth_standard/common/",
  ]
}

ohos_shared_library("btframework") {
  configs = [ ":btframework_config" ]
  public_configs = [ ":btframework_public_config" ]
  sources = [
    "../c_adapter/ohos_bt_gap.cpp",
    "../c_adapter/ohos_bt_gatt.cpp",
    "../c_adapter/ohos_bt_gatt_server.cpp",
    "src/bluetooth_ble_advertiser.cpp",
    "src/bluetooth_ble_central_manager.cpp",
    "src/bluetooth_device_class.cpp",
    "src/bluetooth_gatt_characteristic.cpp",
    "src/bluetooth_gatt_client.cpp",
    "src/bluetooth_gatt_descriptor.cpp",
    "src/bluetooth_gatt_manager.cpp",
    "src/bluetooth_gatt_server.cpp",
    "src/bluetooth_gatt_service.cpp",
    "src/bluetooth_host.cpp",
    "src/bluetooth_remote_device.cpp",
    "src/bluetooth_socket.cpp",
    "src/bluetooth_socket_inputstream.cpp",
    "src/bluetooth_socket_outputstream.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth_standard/ipc:btipc_static",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "communication"
  part_name = "bluetooth_standard"
}
