# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "bluetooth_standard/server_test"

###############################################################################
#1. intent(c++) get/set test without transport

config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "mock/include",
    "//third_party/json/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/bluetooth/services/bluetooth_standard/service/src/common",
    "//foundation/communication/bluetooth/services/bluetooth_standard/service/src/",
    "//foundation/communication/bluetooth/services/bluetooth_standard/service/src/base",
  ]
  defines = [
    "BTFW_LOG_TAG = \"bluetooth_test\"",
    "BTFW_LOG_DOMAIN = 0xD005300",
  ]
}

ohos_moduletest("btsvr_module_test") {
  module_out_path = module_output_path
  sources = [ "moduletest/hosttest/host_srv_module_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/communication/bluetooth/services/bluetooth_standard/server:bluetooth_server",
    "//foundation/communication/bluetooth/services/bluetooth_standard/service:btservice",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
    "//utils/native/base:utilsecurec_shared",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

################################################################################
group("moduletest") {
  testonly = true

  deps = []

  if (is_phone_product) {
    deps += [ ":btsvr_module_test" ]
  }
}
