#cmake compability
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

#allow more human readalbe "if then else" construct
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(util)

IF(${ENABLE_BLE} STREQUAL "ON")
     ADD_SUBDIRECTORY(ble)
ENDIF()

IF(${ENABLE_CLASSIC} STREQUAL "ON")
     ADD_SUBDIRECTORY(classic)
ENDIF()

IF(${ENABLE_PBAP_PCE} STREQUAL "ON")
     IF(${ENABLE_PBAP_PSE} STREQUAL "ON")
          ADD_SUBDIRECTORY(pbap)
     ENDIF()
ENDIF()

IF(${ENABLE_MAP_MCE} STREQUAL "ON")
     ADD_SUBDIRECTORY(map_mce)
ENDIF()

IF(${ENABLE_MAP_MSE} STREQUAL "ON")
     ADD_SUBDIRECTORY(map_mse)
ENDIF()

IF(${ENABLE_OBEX} STREQUAL "ON")
     ADD_SUBDIRECTORY(obex)
ENDIF()

IF(${ENABLE_AVRCP_TG} STREQUAL "ON")
     ADD_SUBDIRECTORY(avrcp_tg)
ENDIF()

IF(${ENABLE_AVRCP_CT} STREQUAL "ON")
     ADD_SUBDIRECTORY(avrcp_ct)
ENDIF()

IF(${ENABLE_A2DP_SRC} STREQUAL "ON")
     ADD_SUBDIRECTORY(a2dp_src)
ENDIF()

IF(${ENABLE_A2DP_SNK} STREQUAL "ON")
     ADD_SUBDIRECTORY(a2dp_snk)
ENDIF()

IF(${ENABLE_GATT} STREQUAL "ON")
     ADD_SUBDIRECTORY(gatt)
ENDIF()

IF(${ENABLE_HFP_AG} STREQUAL "ON")
     ADD_SUBDIRECTORY(hfp_ag)
ENDIF()

IF(${ENABLE_HFP_HF} STREQUAL "ON")
     ADD_SUBDIRECTORY(hfp_hf)
ENDIF()

IF(${ENABLE_SPP} STREQUAL "ON")
     ADD_SUBDIRECTORY(sock)
ENDIF()

IF(${ENABLE_DI} STREQUAL "ON")
     ADD_SUBDIRECTORY(di)
ENDIF()
