# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

BT_PART_DIR = "../../../../.."
BT_NAPI_DIR = "$BT_PART_DIR/frameworks/js/napi"

ohos_shared_library("a2dp") {
  stack_protector_ret = true

  #install_enable = true
  include_dirs = [
    "$BT_NAPI_DIR/include",
    "$BT_NAPI_DIR/src",
    "$BT_PART_DIR/frameworks/inner/common",
  ]

  defines = [
    "BT_LOG_TAG = \"bluetooth_napi\"",
    "BT_LOG_DOMAIN = 0xD000100",
    "ENABLE_NAPI_BLUETOOTH_MANAGER",
    "BLUETOOTH_API_SINCE_10",
  ]

  sources = [
    "$BT_NAPI_DIR/src/a2dp/napi_bluetooth_a2dp_src.cpp",
    "$BT_NAPI_DIR/src/a2dp/napi_bluetooth_a2dp_src_observer.cpp",
    "$BT_NAPI_DIR/src/a2dp/native_module_a2dp.cpp",
    "$BT_NAPI_DIR/src/common/napi_async_callback.cpp",
    "$BT_NAPI_DIR/src/common/napi_async_work.cpp",
    "$BT_NAPI_DIR/src/common/napi_bluetooth_error.cpp",
    "$BT_NAPI_DIR/src/common/napi_bluetooth_event.cpp",
    "$BT_NAPI_DIR/src/common/napi_bluetooth_utils.cpp",
    "$BT_NAPI_DIR/src/common/napi_native_object.cpp",
    "$BT_NAPI_DIR/src/common/napi_timer.cpp",
    "$BT_NAPI_DIR/src/parser/napi_parser_utils.cpp",
  ]

  deps = [ "$BT_PART_DIR/frameworks/inner:btframework" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libuv:uv",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/bluetooth"
  part_name = "bluetooth"
  subsystem_name = "communication"
}
