# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

BT_PART_DIR = "../../../../.."
BT_NAPI_DIR = "$BT_PART_DIR/frameworks/js/napi"

ohos_shared_library("baseprofile") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI

  #install_enable = true
  include_dirs = [
    "$BT_NAPI_DIR/include",
    "$BT_NAPI_DIR/src/base_profile",
    "//third_party/node/src",
    "$BT_PART_DIR/frameworks/inner/common",
  ]

  defines = [
    "BT_LOG_TAG = \"bluetooth_napi\"",
    "BT_LOG_DOMAIN = 0xD000100",
    "ENABLE_NAPI_BLUETOOTH_MANAGER",
    "BLUETOOTH_API_SINCE_10",
  ]

  sources = [
    "$BT_NAPI_DIR/src/common/napi_bluetooth_utils.cpp",
    "napi_bluetooth_base_profile.cpp",
    "native_module_base_profile.cpp",
  ]

  deps = [ "$BT_PART_DIR/frameworks/inner:btframework" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libuv:uv",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/bluetooth"
  part_name = "bluetooth"
  subsystem_name = "communication"
}
