# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

BT_PART_DIR = "../../../../.."
BT_NAPI_DIR = "$BT_PART_DIR/frameworks/js/napi"
ohos_shared_library("ble") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI

  #install_enable = true
  include_dirs = [
    "$BT_NAPI_DIR/include",
    "$BT_PART_DIR/frameworks/inner/include",
  ]

  defines = [
    "BT_LOG_TAG = \"bluetooth_napi\"",
    "BT_LOG_DOMAIN = 0xD000100",
    "ENABLE_NAPI_BLUETOOTH_MANAGER",
    "BLUETOOTH_API_SINCE_10",
    "BT_MODULE_NAME = \"bluetooth.ble\"",
  ]

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = true  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = true  # Enable integer overflow detection
    ubsan = true  # Enable some Ubsan options
    debug = false
  }

  sources = [
    "napi_bluetooth_ble.cpp",
    "napi_bluetooth_ble_advertise_callback.cpp",
    "napi_bluetooth_ble_central_manager_callback.cpp",
    "napi_bluetooth_ble_scanner.cpp",
    "napi_bluetooth_ble_utils.cpp",
    "napi_bluetooth_gatt_client.cpp",
    "napi_bluetooth_gatt_client_callback.cpp",
    "napi_bluetooth_gatt_server.cpp",
    "napi_bluetooth_gatt_server_callback.cpp",
    "native_module_ble.cpp",
  ]

  deps = [
    "$BT_PART_DIR/frameworks/inner:btframework",
    "$BT_PART_DIR/frameworks/js/napi/src/common:bt_napi_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "libuv:uv",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/bluetooth"
  part_name = "bluetooth"
  subsystem_name = "communication"
}
